--- a/index.html
+++ b/index.html
@@ -193,6 +193,16 @@
       </div>
     </div>
 
+    <div class="card" data-tab="technology">
+      <div class="headline">AI Coming For Us All!!</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By MADELIN STRANGE</span>
+      </div>
+    </div>
+
     <div class="card" data-tab="jquery">
       <div class="headline">Why I Use jQuery in Every Application I Create and Why You Should Too</div>
       <div class="author">
@@ -212,7 +222,15 @@
         <span>By MAX GOODBOYE</span>
       </div>
     </div>
-
+    <div class="card" data-tab="bootstrap">
+      <div class="headline">I Still Don't Know What Bootstrap Is!</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By MADELIN STRANGE</span>
+      </div>
+    </div>
   </div>
 </body>
 
